added extra constructor for from csv change csv database to use input stream, change from get first to get(0)